fixed route layout to responsive

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               </div><!-- .col-md-12 end -->
             </div>  
             <div class="row">
-                  <div class="accordion col-8"id="accordionExample">
+                  <div class="accordion col-md-8 col-lg-8 col-sm-12"id="accordionExample">
                       <div class="accordion-item" style="background-color: transparent;">
                         <h2 class="accordion-header" id="headingOne">
                           <button class="accordion-button border-bottom border-warning text-white" style="
@@ -142,32 +142,32 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show text-white" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                           <div class="accordion-body row">
-                             <div class="col-4 ">
+                             <div class="col-4">
                                 <ul class="fa-ul">
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Vanaz</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Anand Nagar</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Ideal Colony</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Nal Stop</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Garware College</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Deccan Gymkhana</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Vanaz</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Anand Nagar</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Ideal Colony</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Nal Stop</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Garware College</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Deccan Gymkhana</i> </li>
                                 </ul>
                               </div>
                               <div class="col-4">
                                 <ul class="fa-ul">
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Chhatrapati Udyan</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">PMC</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Civil Court</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Mangalwar Peth</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Pune Railway Station</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Ruby Hall Clinic</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Chhatrapati Udyan</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">PMC</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Civil Court</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Mangalwar Peth</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Pune Railway Station</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Ruby Hall Clinic</i> </li>
                                 </ul>
                               </div>
                               <div class="col-4">
                                 <ul class="fa-ul">   
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Bund Garden</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Yerawada</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Kalyani Nagar</i> </li>
-                                  <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Ramwadi</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Bund Garden</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Yerawada</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Kalyani Nagar</i> </li>
+                                  <li> <i class="bi bi-pin"  ></i><i class="fa">Ramwadi</i> </li>
                                 </ul>
                               </div>
                           </div>
@@ -181,37 +181,37 @@
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                           <div class="accordion-body row text-white">
-                            <div class="col-4 ">
+                            <div class="col-4">
                               <ul class="fa-ul">
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">PCMC</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Sant Tukaram Nagar</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Bhosari (Nashik)</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Kasarwadi</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Phugewadi</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">PCMC</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Sant Tukaram Nagar</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Bhosari (Nashik)</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Kasarwadi</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Phugewadi</i> </li>
                               </ul>
                             </div>
                             <div class="col-4">
                               <ul class="fa-ul">
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Bopodi</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Dapodi</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Khadki</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Range Hill</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Shivaji Nagar</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Bopodi</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Dapodi</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Khadki</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Range Hill</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Shivaji Nagar</i> </li>
                               </ul>
                             </div>
                             <div class="col-4">
                               <ul class="fa-ul">   
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Civil Court</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Budhwar Peth</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Mandai</i> </li>
-                                <li> <i class="bi bi-pin" style="float: left"></i><i class="fa">Swargate</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Civil Court</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Budhwar Peth</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Mandai</i> </li>
+                                <li> <i class="bi bi-pin"  ></i><i class="fa">Swargate</i> </li>
                               </ul>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-lg-4 col-sm-12">
                        <div class="portfolio">
                           <div class="portfolio-item filter-app" data-aos="fade-up">
                             <div class="portfolio-wrap">
