--- a/about.html
+++ b/about.html
@@ -5,13 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Maxim Bootstrap Template - Index</title>
+  <title>Welcome : Pune Metro</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -193,7 +191,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-6 col-md-6">
             <div class="footer-info">
               <h3>Pune Metro</h3>
               <p>
@@ -214,7 +212,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-links">
+          <div class="col-lg-6 col-md-6 footer-links">
             <h4>Quick Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></i> </li>
@@ -225,16 +223,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></i> </li>
-            </ul>
-          </div>
+          
 
    
         </div>
