--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Maxim Bootstrap Template - Index</title>
+  <title>Welcome : Pune Metro</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -135,12 +132,12 @@
                   <div class="accordion col-md-8 col-lg-8 col-sm-12"id="accordionExample">
                       <div class="accordion-item" style="background-color: transparent;">
                         <h2 class="accordion-header" id="headingOne">
-                          <button class="accordion-button border-bottom border-warning text-white" style="
-                          background-color: transparent;" type="button"  data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <button class="accordion-button collapsed border-bottom border-warning text-white" style=" background-color: transparent;" type="button"
+                           data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             Route 1
                           </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show text-white" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div id="collapseThree" class="accordion-collapse collapse  text-white" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                           <div class="accordion-body row">
                              <div class="col-4">
                                 <ul class="fa-ul">
@@ -175,7 +172,8 @@
                       </div>
                       <div class="accordion-item" style="background-color: transparent;">
                         <h2 class="accordion-header" id="headingTwo">
-                          <button class="accordion-button collapsed border-bottom border-warning text-white" style=" background-color: transparent;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          <button class="accordion-button collapsed border-bottom border-warning text-white" style=" background-color: transparent;" type="button"
+                           data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             Route 2
                           </button>
                         </h2>
@@ -410,7 +408,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-6 col-md-6">
             <div class="footer-info">
               <h3>Pune Metro</h3>
               <p>
@@ -431,7 +429,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-links">
+          <div class="col-lg-6 col-md-6 footer-links" >
             <h4>Quick Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></i> </li>
@@ -442,16 +440,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></i> </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></i> </li>
-            </ul>
-          </div>
+        
 
    
         </div>
